# rl-app-scaler

./: README.md
app-agent/: Dockerfile  pyproject.toml
app-agent/app_agent/: app.py
app-agent/load_balancer/: nginx.conf
app-agent/tests/: test_app_agent.py
rl-orchestrator/: http-test.js  pyproject.toml  shutdown-nodes.sh  test-nodes.sh
rl-orchestrator/rl_orchestrator/: agent.py  docker_interface.py  node.py  orchestrator.py
rl-orchestrator/tests/: test_rl_orchestrator.py
