[tool.poetry]
name = "rl-orchestrator"
version = "0.1.0"
description = ""
authors = ["Krithik Rao <krdevmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
gym = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
